// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fastapi react generator > should generate OpenAPI spec script > generate_open_api.py 1`] = `
"from src.main import app
import json, os, sys

os.makedirs(os.path.dirname(sys.argv[1]), exist_ok=True)
with open(sys.argv[1], 'w') as f:
  json.dump(app.openapi(), f)
"
`;

exports[`fastapi react generator > should generate client hook > useTestApi.tsx 1`] = `
"import { TestApi } from '../generated/test-api/client.gen';
import { useRuntimeConfig } from './useRuntimeConfig';
import { useMemo } from 'react';

export const useTestApi = (): TestApi => {
  const runtimeConfig = useRuntimeConfig();
  const apiUrl = runtimeConfig.httpApis.TestApi;
  return useMemo(
    () =>
      new TestApi({
        url: apiUrl,
      }),
    [apiUrl],
  );
};
"
`;

exports[`fastapi react generator > should handle IAM auth option > useTestApi-IAM.tsx 1`] = `
"import { TestApi } from '../generated/test-api/client.gen';
import { useSigV4 } from './useSigV4';
import { useRuntimeConfig } from './useRuntimeConfig';
import { useMemo } from 'react';

export const useTestApi = (): TestApi => {
  const runtimeConfig = useRuntimeConfig();
  const apiUrl = runtimeConfig.httpApis.TestApi;
  const sigv4Client = useSigV4();
  return useMemo(
    () =>
      new TestApi({
        url: apiUrl,
        fetch: sigv4Client,
      }),
    [apiUrl, sigv4Client],
  );
};
"
`;
